objects/CheckIn_CMV__Visit__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <formula>TEXT( Tour_Plans__r.Approval_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_in_Day__c</fullName>
        <formula>CASE(
    WEEKDAY(DATEVALUE( CheckIn_CMV__Check_in_Date_Time__c )),
    1, &quot;Sunday&quot;,
    2, &quot;Monday&quot;,
    3, &quot;Tuesday&quot;,
    4, &quot;Wednesday&quot;,
    5, &quot;Thursday&quot;,
    6, &quot;Friday&quot;,
    7, &quot;Saturday&quot;,
    &quot;-&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check in Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_In_Completed__c</fullName>
        <formula>NOT(ISBLANK(CheckIn_CMV__Check_in_Date_Time__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checked In Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Combined_Date_and_Visit__c</fullName>
        <formula>IF(
    NOT(ISBLANK(CheckIn_CMV__Account__r.Id)), CheckIn_CMV__Account__r.Name,
    IF(NOT(ISBLANK(CheckIn_CMV__Lead__r.Id)), CheckIn_CMV__Lead__r.LastName,
    IF(NOT(ISBLANK(CheckIn_CMV__Opportunity__r.Id)), CheckIn_CMV__Opportunity__r.Name,
    &quot;No Name&quot;
))) &amp; &quot; || &quot; &amp; 
TEXT(DAY(Planned_Date__c)) &amp; &quot;-&quot; &amp; TEXT(MONTH(Planned_Date__c)) &amp; &quot;-&quot; &amp; TEXT(YEAR(Planned_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Date and Visit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comorbidities__c</fullName>
        <label>Comorbidities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hyper-tension</fullName>
                </value>
                <value>
                    <fullName>Diabetic</fullName>
                </value>
                <value>
                    <fullName>Heart-Disease</fullName>
                </value>
                <value>
                    <fullName>Nerve Problem</fullName>
                </value>
                <value>
                    <fullName>Psychiatric disorder</fullName>
                </value>
                <value>
                    <fullName>Gynocological Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_s_Note__c</fullName>
        <label>Doctor&apos;s Note</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need to Re-visit</fullName>
                </value>
                <value>
                    <fullName>Need to diagnosys</fullName>
                </value>
                <value>
                    <fullName>Refer to other segment</fullName>
                </value>
                <value>
                    <fullName>Refer to immediate admission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Iris__c</fullName>
        <label>Patient Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outdoor Patient</fullName>
                </value>
                <value>
                    <fullName>Indoor Patient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome_of_Visit__c</fullName>
        <label>Outcome of Visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Date__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Visit_Fill_before_Tour__c</fullName>
        <label>Purpose of Visit (Fill before Tour)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tour_Plans__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Plans</label>
        <referenceTo>Tour_Plans__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Name__c</fullName>
        <formula>HYPERLINK(
    &quot;/&quot; &amp; Id,
    IF(
        NOT(ISBLANK( CheckIn_CMV__Account__r.Id )),
         CheckIn_CMV__Account__r.Name ,
        &quot;View Record&quot;
    ),
    &quot;_blank&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <label>Visit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Unplanned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visited__c</fullName>
        <formula>IF(ISBLANK( CheckIn_CMV__Check_in_Date_Time__c ),
   IMAGE(&quot;/resource/CheckIn_CMV__error_icon_non_compliant&quot;, &quot;Error red X&quot;, 25, 25),

IF(ISBLANK( CheckIn_CMV__Check_in_Date_Time__c ) &amp;&amp; Planned_Date__c &lt; TODAY() ,
   IMAGE(&quot;/resource/CheckIn_CMV__error_icon_non_compliant&quot;, &quot;Error red X&quot;, 25, 25),
     
        IMAGE(&quot;/resource/CheckIn_CMV__success_icon_compliant&quot;, &quot;Green Check&quot;, 25, 25) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visited</label>
        <type>Text</type>
    </fields>
</CustomObject>